Adding JVM options, hprof to instrumentation.